force-app/main/default/objects/Monthly_Attendance_Approval__c/Monthly_Attendance_Approval__c.object-meta.xml
<CustomObject>
    <label>Monthly Attendance Approval</label>
    <nameField>
        <label>Monthly Attendance Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Attendance Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>