force-app/main/default/objects/Monthly_Attendance_Approval__c/fields/Number_Of_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Approvals__c</fullName>
    <label>Number Of Approvals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>