force-app/main/default/objects/Monthly_Attendance_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MANOJ KUMAR M</value>
    </filters>
    <label>All</label>
</ListView>